apps-ingress/jaeger/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-jaeger
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jaeger.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-jaeger
  namespace: istio-system
spec:
  hosts:
  - "jaeger.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-jaeger
  http:
  - name: 'jaeger-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: tracing
